# mark2

./: CMakeLists.txt  README.md  app.cpp  app.h  base_types.h  formatter.cpp  formatter.h  main.cpp  main2.cpp  markov_model.cpp  markov_model.h  markov_model_serializer.cpp  markov_model_serializer.h  markov_model_tutor.cpp  markov_model_tutor.h  misc.h  pipe_base.cpp  pipe_base.h  pipe_read.cpp  pipe_read.h  str_filter.cpp  str_filter.h  test_01.cpp  test_02.cpp  test_03.cpp
data/: belkin.txt  case_001.txt  case_002.txt  case_003.txt  case_031.txt  create.sh  dub.txt  exec.sh  model2.txt  model3.txt  model_01.txt  model_02.txt  rand_text.sh  urls.txt  urls2.txt  urls_00.txt  urls_02.txt  urls_03.txt
src/: app.cpp  app.h  base_types.h  main.cpp  markov_model.cpp  markov_model.h  markov_model_serializer.cpp  markov_model_tutor.cpp  markov_model_tutor.h  misc.cpp  misc.h  pipe_base.cpp  pipe_read.cpp  pipe_read.h  str_filter.cpp  str_filter.h  string_view.cpp  string_view.h  token_iterator.cpp  token_iterator.h
src/test/: test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp
